comments out find_by_last_name
